# project-euler-rust-template

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
